--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:5000';
+        const API_BASE_URL = 'https://classifymail-v6.onrender.com/';
 
         // Form submission handler
         document.getElementById('emailForm').addEventListener('submit', async function(e) {
